cmake_minimum_required(VERSION 3.12)

PROJECT (openssl-hello-world)

# 3rd_party dependencies
INCLUDE(openssl.cmake)
INCLUDE(cppcodec.cmake)

INCLUDE_DIRECTORIES(
  ${CPPCODEC_INCLUDE_DIRECTORIES}
  ${OPENSSL_INCLUDE_DIRECTORIES}
)

LINK_DIRECTORIES(${OPENSSL_LINK_DIRECTORIES})

ADD_SUBDIRECTORY(ssl)
ADD_SUBDIRECTORY(crypto)